# book_queue

./: .gitignore  README.md  README_PT-BR.md  pyproject.toml  pyrightconfig.json
src/book_queue/: database.py  main.py  schemas.py
src/book_queue/api/v1/: books.py  chapters.py  notes.py
src/book_queue/core/: database.py  dependencies.py  schemas.py  settings.py
src/book_queue/models/: models.py
src/book_queue/services/: book_service.py  chapter_service.py  notes_service.py
tests/: conftest.py
tests/e2e/: test_book_endpoints.py  test_book_enpoints.py  test_chapter_endpoints.py  test_main.py  test_note_endpoints.py
tests/integration/: test_book_service.py  test_chapter_service.py  test_dbhandler.py  test_note_service.py
tests/unit/: test_models.py
