[project]
name = "book-queue"
version = "0.1.0"
description = "Back-end for techinical books summary"
authors = [
    { name = "David Aderaldo", email = "davidade.dev@gmail.com" }
]
package-mode = false
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-html (>=4.1.1,<5.0.0)",
    "ruff (>=0.14.10,<0.15.0)",
    "fastapi[standard] (>=0.128.3,<0.129.0)",
    "basedpyright (>=1.37.4,<2.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]

[tool.poetry]
packages = [{ include = "book_queue", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 80
format.quote-style = "single"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.coverage.run]
omit = [
    "*/__init__.py"
]